[package]
name = "levels"
version = "1.0.0"
authors = ["haze <isnt@haze.cool>"]
edition = "2018"

[dependencies]
serenity = "0.5.12"
redis = { version = "0.10.0", features = ["with-rustc-json"] }
chrono = { version = "0.4.6", features = ["serde"] }
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
rand = "0.6.5"
log = "0.4.6"
fern = "0.5.7"
colored = "1.7.0"
left-pad = "1.0.1"
reqwest = "0.9.11"
# crossbeam = "0.7.1"
array_tool = "1.0.3"

[features]
default = []
docker = []